# pkl-lang.org

./: .gitignore  404.html  CNAME  CONTRIBUTING.adoc  NOTICE.txt  README.adoc  SECURITY.adoc  SECURITY.md  build.gradle.kts  gradle.properties  index.html  package-lock.json  package.json  search-index.js  security.html  settings.gradle.kts  sitemap-ROOT.xml  sitemap-blog.xml  sitemap-go.xml  sitemap-intellij.xml  sitemap-lsp.xml  sitemap-main.xml  sitemap-neovim.xml  sitemap-spring.xml  sitemap-swift.xml  sitemap-vscode.xml  sitemap.xml  threat-model.html  tsconfig.json
.circleci/: config.pkl  config.yml
.github/: PklProject  PklProject.deps.json  dependabot.yml  index.pkl
.github/workflows/: __lockfile__.yml  build.yml  codeql.yml  main.yml  prb.yml
_/css/: landing.css  search.css  site-extra.css  site.css
_/js/: landing-page-support.js  theme-switcher.js
blog/: 2024-01-12-pkl-release.html  antora.yml  building-cli-tools-with-pkl.html  class-as-a-function.html  feed.xml  how-we-manage-github-actions.html  index.html  introducing-pkl.html  know-your-place.html  nav.adoc  pkl-evolution.html  testing-in-pkl.html  using-packages-in-air-gapped-environments.html  using-types.html
buildSrc/: build.gradle.kts  settings.gradle.kts
go/0.10.0/: CHANGELOG.html  codegen.html  evaluation.html  (+3 more)
gradle/: libs.versions.toml
landing/: antora.yml  nav.adoc
package-docs/: index.html  search-index.js
pkl-html-highlighter/: Cargo.toml  README.adoc
pkl-html-highlighter/queries/: highlights.scm
pkl-html-highlighter/src/: main.rs
src/: site-local.yml  site-remote.yml
(+34587 files in other folders)
