[package]
name = "pkl_html_highlighter"
version = "0.6.0"
edition = "2018"
authors = ["pkl-oss@group.apple.com"]

[dependencies]
tree-sitter-highlight = "0.20"
# TODO(oss) replace with tag once tree-sitter-pkl is published
tree-sitter-pkl = { git = "ssh://git@github.com/apple/tree-sitter-pkl.git", branch = "main" }
clap = { version = "4.4.2", features = ["derive"] }

[net]
git-fetch-with-cli = true

[[bin]]
name = "pkl-html-highlighter"
path = "src/main.rs"
