[package]
name = "pkl_html_highlighter"
version = "0.6.0"
edition = "2018"
authors = ["pkl-oss@group.apple.com"]

[dependencies]
tree-sitter-highlight = "0.20"
tree-sitter-pkl = { git = "ssh://git@github.com/apple/tree-sitter-pkl.git", tag = "0.16.0" }
clap = { version = "4.4.2", features = ["derive"] }

[net]
git-fetch-with-cli = true

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "pkl-html-highlighter"
path = "src/main.rs"
