[package]
name = "pkl_html_highlighter"
version = "0.6.0"
edition = "2018"
authors = ["pkl-oss@group.apple.com"]

[dependencies]
tree-sitter-highlight = "0.26.3"
tree-sitter-pkl = { git = "https://github.com/apple/tree-sitter-pkl.git", rev = "ac58931956c000d3aeefbb55a81fc3c5bd6aecf0" }
clap = { version = "4.4.2", features = ["derive"] }

[net]
git-fetch-with-cli = true

[[bin]]
name = "pkl-html-highlighter"
path = "src/main.rs"
